Fix layout bug on the about page - in small (but not the smallest) screens

--- a/client/stylesheets/summit2014.less
+++ b/client/stylesheets/summit2014.less
@@ -71,3 +71,8 @@ a.share-twitter {
 .no-underline, .no-underline:hover, .no-underline *, .no-underline *:hover {
   text-decoration: none;
 }
+
+.about-person {
+  margin-bottom: 5px;
+  .clearfix();
+}
